--- a/Android/res/layout/main.xml
+++ b/Android/res/layout/main.xml
@@ -3,10 +3,12 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
-
     <TextView
-        android:layout_width="fill_parent"
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello" />
+        android:text="@string/insa"
+        android:textColor="#99CCFF"
+        android:textSize="100dip" />
 
 </LinearLayout>
