--- a/Android/res/layout/config.xml
+++ b/Android/res/layout/config.xml
@@ -3,11 +3,8 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
-
-    <ListView
-        android:id="@+id/listView1"
+    <ListView 
+        android:id="@+id/cfglist"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
-    </ListView>
-
+        android:layout_height="fill_parent"/>
 </LinearLayout>
