--- a/Android/res/layout/friendlist.xml
+++ b/Android/res/layout/friendlist.xml
@@ -3,11 +3,10 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
-
+    
     <ListView
-        android:id="@+id/listView1"
+        android:id="@+id/flist"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="fill_parent" >
     </ListView>
-
 </LinearLayout>
