--- a/Android/res/layout/receivingmaum.xml
+++ b/Android/res/layout/receivingmaum.xml
@@ -5,9 +5,9 @@
     android:orientation="vertical" >
 
     <ListView
-        android:id="@+id/listView1"
+        android:id="@+id/rcvmaumlist"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="fill_parent" >
     </ListView>
 
 </LinearLayout>
