--- a/roland87-Toruk-Makto-Mobile-e581988/Android/res/layout/receivingmaum.xml
+++ b/roland87-Toruk-Makto-Mobile-e581988/Android/res/layout/receivingmaum.xml
@@ -4,6 +4,24 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
+    <TextView
+        android:id="@+id/TextView01"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20px"
+        android:ems="10"
+        android:text="누군가로부터 받고있는 마음의 수: 17" />
+
+    <TextView
+        android:id="@+id/TextView01"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20px"
+        android:textSize="10pt"
+        android:ems="10"
+        android:background="#00ff00"
+        android:text="상대방과 연결된 마음" />
+    
     <ListView
         android:id="@+id/rcvmaumlist"
         android:layout_width="fill_parent"
