--- a/roland87-Toruk-Makto-Mobile-e581988/Android/res/layout/editflist.xml
+++ b/roland87-Toruk-Makto-Mobile-e581988/Android/res/layout/editflist.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:text="주변 친구 검색" />
+        android:text="친구 목록 편집" />
     
     <ListView
         android:id="@+id/flist"
